<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.mtuosc.techchat.activity.LoginActivity"
    android:background="@color/colorPrimaryDark"
    >

    <!-- Login progress -->


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/mtu_logo"/>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginTextLabel"
            android:id="@+id/email_login_wrapper"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginTextLabel"
            android:id="@+id/password_login_wrapper"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/SignUpSignInButtons"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:onClick="authenticateUser"/>

        <TextView
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:text="@string/signup_message"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:textSize="15sp"
            android:onClick="moveToUserCreation"
            />

    </LinearLayout>
</LinearLayout>
